[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gameplay/gui/game_over_panel/game_over_panel.gd" type="Script" id=2]
[ext_resource path="res://gui/button/button.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 1 )

[node name="game_over_panel" type="Panel"]
visible = false
margin_left = 440.0
margin_top = 235.0
margin_right = 840.0
margin_bottom = 485.0
rect_min_size = Vector2( 400, 250 )
script = ExtResource( 2 )

[node name="margin_container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="vbox_container" type="VBoxContainer" parent="margin_container"]
margin_left = 30.0
margin_top = 30.0
margin_right = 370.0
margin_bottom = 220.0
custom_constants/separation = 10

[node name="title" type="Label" parent="margin_container/vbox_container"]
margin_right = 340.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "¡Game over!"
align = 1

[node name="body" type="Label" parent="margin_container/vbox_container"]
margin_top = 81.0
margin_right = 340.0
margin_bottom = 107.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "¡Has llegado al 0!"
align = 1
autowrap = true

[node name="restart_button" parent="margin_container/vbox_container" instance=ExtResource( 3 )]
pause_mode = 2

[connection signal="pressed" from="margin_container/vbox_container/restart_button" to="." method="_on_restart_button_pressed"]
